--- a/compound/ctoken-exchange-rate/Dockerfile
+++ b/compound/ctoken-exchange-rate/Dockerfile
@@ -1,7 +1,9 @@
 # Build stage: compile Typescript to Javascript
-FROM node:14.15.5-alpine AS builder
+FROM node:12-alpine AS builder
 WORKDIR /app
 COPY . .
+RUN apk add --no-cache git
+RUN npm set unsafe-perm true
 RUN npm ci
 RUN npm run build
 # obfuscate compiled Javascript (optional)
@@ -9,13 +11,13 @@ RUN npm run build
 # RUN javascript-obfuscator ./dist --output ./obfuscated --split-strings true --split-strings-chunk-length 3
 
 # Final stage: copy compiled Javascript from previous stage and install production dependencies
-FROM node:14.15.5-alpine
+FROM node:12-alpine
 ENV NODE_ENV=production
 WORKDIR /app
 # if using obfuscated code:
 # COPY --from=builder /app/obfuscated ./src
 # else if using unobfuscated code:
-COPY --from=builder /app/dist ./src
+COPY --from=builder /app/dist ./
 COPY package*.json ./
 RUN npm ci --production
 CMD [ "npm", "run", "start:prod" ]
