--- a/compound/ctoken-exchange-rate/package.json
+++ b/compound/ctoken-exchange-rate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compound-ctoken-exchange-rate-agent",
+  "name": "forta-compound-ctoken-exchange-rate-agent",
   "version": "0.0.1",
   "description": "Compound cToken Exchange Rate Agent",
   "scripts": {
@@ -12,26 +12,35 @@
     "range": "npm run build && forta-agent run --range",
     "file": "npm run build && forta-agent run --file",
     "publish": "forta-agent publish",
+    "push": "forta-agent push",
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
+    "keyfile": "forta-agent keyfile",
     "test": "jest",
-    "install": "git clone https://github.com/compound-finance/compound-config.git node_modules/compound-config"
+    "install": "napa compound-finance/compound-config"
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "forta-agent": "^0.0.22",
+    "forta-agent": "^0.0.34",
     "keccak256": "^1.0.3",
     "lodash": "^4.17.21",
-    "web3": "^1.6.0"
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.176",
     "@types/nodemon": "^1.19.0",
     "jest": "^27.0.6",
+    "napa": "^3.0.0",
     "nodemon": "^2.0.8",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  },
+  "config": {
+    "unsafe-perm":true
   }
 }
