--- a/compound/governance-events/package.json
+++ b/compound/governance-events/package.json
@@ -12,14 +12,16 @@
     "range": "npm run build && forta-agent run --range",
     "file": "npm run build && forta-agent run --file",
     "publish": "forta-agent publish",
+    "push": "forta-agent push",
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
+    "keyfile": "forta-agent keyfile",
     "test": "jest",
-    "install": "git clone https://github.com/compound-finance/compound-config.git node_modules/compound-config"
+    "install": "napa compound-finance/compound-config"
   },
   "dependencies": {
     "ethers": "^5.5.1",
-    "forta-agent": "^0.0.22",
+    "forta-agent": "^0.0.34",
     "keccak256": "^1.0.3",
     "lodash": "^4.17.21"
   },
@@ -31,6 +33,13 @@
     "nodemon": "^2.0.8",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "napa": "^3.0.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  },
+  "config": {
+    "unsafe-perm":true
   }
 }
