--- a/compound/unusual-transfer/package.json
+++ b/compound/unusual-transfer/package.json
@@ -15,11 +15,11 @@
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
     "test": "jest",
-    "install": "git clone https://github.com/compound-finance/compound-config.git node_modules/compound-config"
+    "install": "napa compound-finance/compound-config"
   },
   "dependencies": {
     "ethers": "^5.5.1",
-    "forta-agent": "^0.0.22",
+    "forta-agent": "^0.0.34",
     "bignumber.js": "^9.0.1",
     "keccak256": "^1.0.3",
     "lodash": "^4.17.21"
@@ -32,6 +32,13 @@
     "nodemon": "^2.0.8",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "napa": "^3.0.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  },
+  "config": {
+    "unsafe-perm": true
   }
 }
