--- a/aave/exchange-rate/package.json
+++ b/aave/exchange-rate/package.json
@@ -12,8 +12,10 @@
     "range": "npm run build && forta-agent run --range",
     "file": "npm run build && forta-agent run --file",
     "publish": "forta-agent publish",
+    "push": "forta-agent push",
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
+    "keyfile": "forta-agent keyfile",
     "test": "jest"
   },
   "dependencies": {
@@ -21,8 +23,8 @@
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.5.1",
-    "forta-agent": "^0.0.28",
-    "forta-agent-tools": "^1.0.27",
+    "forta-agent": "^0.0.34",
+    "forta-agent-tools": "^1.0.32",
     "keccak256": "^1.0.3",
     "lodash": "^4.17.21"
   },
