--- a/aave/fallback-price-oracle/package.json
+++ b/aave/fallback-price-oracle/package.json
@@ -12,8 +12,10 @@
     "range": "npm run build && forta-agent run --range",
     "file": "npm run build && forta-agent run --file",
     "publish": "forta-agent publish",
+    "push": "forta-agent push",
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
+    "keyfile": "forta-agent keyfile",
     "test": "jest"
   },
   "dependencies": {
@@ -21,7 +23,7 @@
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.5.1",
-    "forta-agent": "^0.0.29",
+    "forta-agent": "^0.0.34",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
