--- a/compound/utilization-rate/package.json
+++ b/compound/utilization-rate/package.json
@@ -12,8 +12,10 @@
     "range": "npm run build && forta-agent run --range",
     "file": "npm run build && forta-agent run --file",
     "publish": "forta-agent publish",
+    "push": "forta-agent push",
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
+    "keyfile": "forta-agent keyfile",
     "test": "jest",
     "install": "napa compound-finance/compound-config"
   },
