--- a/compound/transaction-blacklist/package.json
+++ b/compound/transaction-blacklist/package.json
@@ -21,22 +21,26 @@
   },
   "dependencies": {
     "forta-agent": "^0.0.34",
+    "forta-agent-tools": "^1.0.32",
     "web3": "^1.6.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/nodemon": "^1.19.0",
     "jest": "^27.0.6",
+    "napa": "^3.0.0",
     "nodemon": "^2.0.8",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4",
-    "napa": "^3.0.0"
+    "typescript": "^4.5.4"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
   },
   "config": {
     "unsafe-perm": true
+  },
+  "napa-config": {
+    "cache": false
   }
 }
