--- a/compound/transaction-blacklist/package.json
+++ b/compound/transaction-blacklist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forta-compound-blacklist-agent",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Forta Compound Blacklist Agent",
   "scripts": {
     "build": "tsc",
@@ -16,8 +16,7 @@
     "disable": "forta-agent disable",
     "enable": "forta-agent enable",
     "keyfile": "forta-agent keyfile",
-    "test": "jest",
-    "install": "napa compound-finance/compound-config"
+    "test": "jest"
   },
   "dependencies": {
     "forta-agent": "^0.0.34",
@@ -28,19 +27,9 @@
     "@types/jest": "^27.0.1",
     "@types/nodemon": "^1.19.0",
     "jest": "^27.0.6",
-    "napa": "^3.0.0",
     "nodemon": "^2.0.8",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.5.4"
-  },
-  "optionalDependencies": {
-    "fsevents": "^2.3.2"
-  },
-  "config": {
-    "unsafe-perm": true
-  },
-  "napa-config": {
-    "cache": false
   }
 }
