--- a/compound/utilization-rate/Dockerfile
+++ b/compound/utilization-rate/Dockerfile
@@ -2,8 +2,6 @@
 FROM node:12-alpine AS builder
 WORKDIR /app
 COPY . .
-RUN apk add --no-cache git
-RUN npm set unsafe-perm true
 RUN npm ci
 RUN npm run build
 # obfuscate compiled Javascript (optional)
@@ -13,11 +11,13 @@ RUN npm run build
 # Final stage: copy compiled Javascript from previous stage and install production dependencies
 FROM node:12-alpine
 ENV NODE_ENV=production
+# Uncomment the following line to enable agent logging
+LABEL "network.forta.settings.agent-logs.enable"="true"
 WORKDIR /app
 # if using obfuscated code:
 # COPY --from=builder /app/obfuscated ./src
 # else if using unobfuscated code:
-COPY --from=builder /app/dist ./
+COPY --from=builder /app/dist ./src
 COPY package*.json ./
 RUN npm ci --production
 CMD [ "npm", "run", "start:prod" ]
