--- a/compound/utilization-rate/Dockerfile
+++ b/compound/utilization-rate/Dockerfile
@@ -4,9 +4,6 @@ WORKDIR /app
 COPY . .
 RUN npm ci
 RUN npm run build
-# obfuscate compiled Javascript (optional)
-# RUN npm install -g javascript-obfuscator
-# RUN javascript-obfuscator ./dist --output ./obfuscated --split-strings true --split-strings-chunk-length 3
 
 # Final stage: copy compiled Javascript from previous stage and install production dependencies
 FROM node:12-alpine
@@ -14,10 +11,8 @@ ENV NODE_ENV=production
 # Uncomment the following line to enable agent logging
 LABEL "network.forta.settings.agent-logs.enable"="true"
 WORKDIR /app
-# if using obfuscated code:
-# COPY --from=builder /app/obfuscated ./src
-# else if using unobfuscated code:
 COPY --from=builder /app/dist ./src
 COPY package*.json ./
+COPY agent-config.json ./
 RUN npm ci --production
 CMD [ "npm", "run", "start:prod" ]
