--- a/openzeppelin/timelock-controller/package.json
+++ b/openzeppelin/timelock-controller/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "forta-openzeppelin-timelock-controller-agent",
+  "name": "openzeppelin-timelock-controller-bot",
   "version": "0.1.0",
-  "description": "Forta Agent that detects exploits of the OpenZeppelin TimelockController contract and helps to monitor any role changes in it",
+  "description": "Helps to monitor role changes in contracts implementing TimelockController",
   "repository": "https://github.com/kovart/forta-agents/tree/main/openzeppelin/timelock-controller/",
+  "chainIds": [
+    1,
+    56,
+    137,
+    42161,
+    10,
+    250,
+    43114
+  ],
+  "chainSettings": {
+    "default": {
+      "shards": 1,
+      "target": 3
+    }
+  },
   "scripts": {
     "build": "tsc",
     "start": "npm run start:dev",
-    "start:dev": "nodemon --watch src --watch forta.config.json -e js,json --exec \"forta-agent run\"",
+    "start:dev": "nodemon --watch src --watch forta.config.json -e js,ts,json  --exec \"npm run build && forta-agent run\"",
     "start:prod": "forta-agent run --prod",
     "tx": "forta-agent run --tx",
     "block": "forta-agent run --block",
@@ -23,8 +38,8 @@
     "@openzeppelin/contracts": "^4.3.3",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.5.1",
-    "forta-agent": "^0.0.32",
-    "forta-agent-tools": "^1.0.31",
+    "forta-agent": "^0.1.31",
+    "forta-agent-tools": "^3.2.7",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
